--- a/star-rating/index.html
+++ b/star-rating/index.html
@@ -13,10 +13,16 @@
   </head>
   <body>
     <!-- <i class="fa fa-star"></i> -->
+    <!-- <i class="fa fa-star-o"></i>
     <i class="fa fa-star-o"></i>
     <i class="fa fa-star-o"></i>
     <i class="fa fa-star-o"></i>
-    <i class="fa fa-star-o"></i>
-    <i class="fa fa-star-o"></i>
+    <i class="fa fa-star-o"></i> -->
+    <div id="star-display"></div>
+    <div>
+      <p id="counter"></p>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
